[gd_scene load_steps=10 format=3 uid="uid://dply1skjqut7x"]

[ext_resource type="PackedScene" uid="uid://cxsk04ljtla46" path="res://scenes/boids_component.tscn" id="1_av7nf"]
[ext_resource type="Script" path="res://scripts/attacker.gd" id="1_o3a0c"]
[ext_resource type="Texture2D" uid="uid://y8tiw2oprtat" path="res://assets/sprites/temp/bee.png" id="2_cjxco"]
[ext_resource type="PackedScene" uid="uid://jaiykhugbens" path="res://scenes/components/attack_component.tscn" id="4_wg17l"]
[ext_resource type="PackedScene" uid="uid://bg8sij5iv4h0j" path="res://scenes/components/health_component.tscn" id="5_rxqik"]
[ext_resource type="PackedScene" uid="uid://tb08j7g6ttxh" path="res://scenes/components/hitbox_component.tscn" id="6_q3247"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hfn2m"]
radius = 5.38517

[sub_resource type="CircleShape2D" id="CircleShape2D_2u70o"]
radius = 1863.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2kadw"]
radius = 1544.43

[node name="Attacker" type="Node2D"]
z_index = 2
script = ExtResource("1_o3a0c")

[node name="BoidsComponent" parent="." node_paths=PackedStringArray("sprite", "flock_area_shape") instance=ExtResource("1_av7nf")]
sprite = NodePath("Sprite2D")
flock_area_shape = NodePath("FlockViewCollision")
max_speed = 350.0
target_follow_force = 0.076
avoid_distance = 35.0
stopable = true

[node name="Sprite2D" type="Sprite2D" parent="BoidsComponent"]
position = Vector2(0.27842, -0.158137)
scale = Vector2(0.027842, 0.0316274)
texture = ExtResource("2_cjxco")

[node name="PhysicsCollision" type="CollisionShape2D" parent="BoidsComponent"]
position = Vector2(2.98023e-08, -1.49012e-08)
scale = Vector2(1, 1)
shape = SubResource("CircleShape2D_hfn2m")

[node name="FlockViewCollision" type="CollisionShape2D" parent="BoidsComponent"]
position = Vector2(0.13921, 0.0948822)
scale = Vector2(0.027842, 0.0316274)
shape = SubResource("CircleShape2D_2u70o")

[node name="AttackComponent" parent="BoidsComponent" instance=ExtResource("4_wg17l")]
attack = 1

[node name="HealthComponent" parent="BoidsComponent" instance=ExtResource("5_rxqik")]
max_hp = 1

[node name="HitboxComponent" parent="BoidsComponent" node_paths=PackedStringArray("health_component", "attack_component") instance=ExtResource("6_q3247")]
health_component = NodePath("../HealthComponent")
attack_component = NodePath("../AttackComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoidsComponent/HitboxComponent"]
scale = Vector2(0.027842, 0.0316274)
shape = SubResource("CircleShape2D_2kadw")

[connection signal="died" from="BoidsComponent/HealthComponent" to="." method="_on_health_component_died"]
